try to fix bug on visual of cards on mobile

--- a/src/pages/MeetTheEmployees/components/EmployeeCard/index.css
+++ b/src/pages/MeetTheEmployees/components/EmployeeCard/index.css
@@ -4,7 +4,12 @@
   background-color: #cacaca;
   border-radius: 14px;
   box-shadow: 0px 0px 15px -1px #000000;
-  background: url("../../../../assets/CardBackground.png");
+  background: url("../../../../assets/CardBackground.png") no-repeat center
+    center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   cursor: pointer;
 }
 
